feat(apipost): add datetime2Mills date2Mills function